<resources>
    <string name="app_name">OpenIM</string>
    <string name="group_bulletin">群公告</string>
    <string name="search_by_id">通过手机号/ID号/昵称搜索添加</string>
    <string name="send_succ">发送成功</string>
    <string name="push_succ">发布成功</string>
    <string name="see_moments">查看动态</string>
    <string name="sunday">星期日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="send">发送</string>
    <string name="network_unavailable_tips">请检查网络是否可用！</string>
    <string name="group_notice">群通知</string>
    <string name="apply__join">申请加入</string>
    <string name="reason">申请理由：</string>
    <string name="agree">同意</string>
    <string name="agreeed">已通过</string>
    <string name="rejected">未通过</string>
    <string name="album">相册</string>
    <string name="shoot">拍摄</string>
    <string name="camera_punch_failed">相机打开失败</string>
    <string name="camera_permission_failed">无法获取摄像头权限</string>
    <string name="camera_is_occupied">相机正在被使用</string>
    <string name="file">文件</string>
    <string name="new_friend">新的好友</string>
    <string name="new_friend_request">新的好友请求</string>
    <string name="accept">接受</string>
    <string name="hil">打招呼</string>
    <string name="create_group">发起群聊</string>
    <string name="create_group_tips">创建群聊，全面使用OpenIM</string>
    <string name="location">位置</string>
    <string name="sure">确定</string>
    <string name="my_location">我的位置</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="video">视频</string>
    <string name="san_it">扫一扫</string>
    <string name="quit_group">退出群聊</string>
    <string name="lord">群主</string>
    <string name="add_member">添加成员</string>
    <string name="remove_member">删除成员</string>
    <string name="Invite_to_the_group">邀请入群</string>
    <string name="Invitation_succeeded">邀请成功</string>
    <string name="remove_group">移除群聊</string>
    <string name="kicked_out">踢出成功</string>
    <string name="cancel">取消</string>
    <string name="eidt">编辑</string>
    <string name="finish">完成</string>
    <string name="group_name">群聊名称</string>
    <string name="group_transfer_permissions">群主管理权转让</string>
    <string name="in_group_name">我在群里的昵称</string>
    <string name="group_qrcode">群二维码</string>
    <string name="copy_group_id">复制团队ID</string>
    <string name="copy_succ">复制成功</string>
    <string name="share_group_tips1">搜索群聊ID号，立刻加入该群。</string>
    <string name="share_group_tips2">扫一扫下面的二维码，立刻加入该群聊</string>
    <string name="my_good_friend">我的好友</string>
    <string name="delete_friend">已删除此好友</string>
    <string name="delete_friend_tips">确定删除此好友吗</string>
    <string name="apply_join">申请加入该群</string>
    <string name="withdraw">撤回</string>
    <string name="delete">删除</string>
    <string name="revoke_tips">%1$s 撤回了一条消息</string>
    <string name="revoke_tips2">%1$s 撤回了 %2$s 的消息</string>
    <string name="forward">转发</string>
    <string name="multiple_choice">多选</string>
    <string name="merge_forward">合并转发</string>
    <string name="group_chat_history">群聊天记录</string>
    <string name="and">和</string>
    <string name="chat_history">的聊天记录</string>
    <string name="chat_history2">聊天记录</string>
    <string name="my_group">我的群组</string>
    <string name="search_group">搜索：群组</string>
    <string name="i_created">我创建的</string>
    <string name="i_joined">我加入的</string>
    <string name="my">我的</string>
    <string name="qr_tips2">扫一扫下面的二维码，添加我为好友</string>
    <string name="qr_code">二维码</string>
    <string name="quit_tips">您确定要退出登陆吗？</string>
    <string name="Invite_a_video_call">邀请你进行视频通话</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="microphone_on">麦克风已开启</string>
    <string name="speaker_on">扬声器已开启</string>
    <string name="microphone_off">麦克风已关闭</string>
    <string name="speaker_off">扬声器已关闭</string>
    <string name="voice_calls">语音通话</string>
    <string name="video_calls">视频通话</string>
    <string name="waiting_tips">正在等待对方接听</string>
    <string name="Invite_a_audio_call">邀请你进行语音通话</string>
    <string name="invite_audio_call">邀请你语音通话</string>
    <string name="invite_video_call">邀请你视频通话</string>
    <string name="calling">正在通话中...</string>
    <string name="audio_video_service">音视频服务</string>
    <string name="audio_video_service_tips1">OpenIM音视频服务</string>
    <string name="audio_video_service_tips2">关闭应用自启动将无法接收音视频请求</string>
    <string name="selete_member">选择成员</string>
    <string name="start_chat">开始聊天</string>
    <string name="dissolve_group">解散群聊</string>
    <string name="dissolve_tips">解散群聊后，将失去群成员的联系</string>
    <string name="quit_group_tips">退出群聊后，将不再接收群聊消息</string>
    <string name="dissolve_tips2">群已解散</string>
    <string name="quit_group_tips2">已退出</string>
    <string name="avatar">头像</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="my_info">我的信息</string>
    <string name="save">保存</string>
    <string name="NickName">昵称</string>
    <string name="male">男</string>
    <string name="girl">女</string>
    <string name="chat_setting">聊天设置</string>
    <string name="search">搜索</string>
    <string name="person_info">个人资料</string>
    <string name="remark">备注</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="clear_chat_record">清空聊天记录</string>
    <string name="clear_chat_tips">确认清空所有聊天记录？</string>
    <string name="clear_succ">清理成功</string>
    <string name="business_card">名片</string>
    <string name="card">名片</string>
    <string name="more_data">更多资料</string>
    <string name="call_history">通话记录</string>
    <string name="all_call">所有通话</string>
    <string name="ont_answer_call">未接通话</string>
    <string name="inbound">呼入</string>
    <string name="outbound">呼出</string>
    <string name="select_from_album">从相册选择</string>
    <string name="take_picture">拍照</string>
    <string name="reduction">还原</string>
    <string name="set_succ">设置成功</string>
    <string name="search_tips">搜索指定内容</string>
    <string name="view_chat_history">查看聊天记录</string>
    <string name="not_find">没有找到相关信息</string>
    <string name="result">相关结果</string>
    <string name="in_week">本周内</string>
    <string name="in_month">本月内</string>
    <string name="cancel_top">取消置顶</string>
    <string name="msg_dont_disturb">消息免打扰</string>
    <string name="top_chat">置顶聊天</string>
    <string name="person_unRead">人未读</string>
    <string name="friend_add">你们已成为好友，可以开始聊天了</string>
    <string name="created_group">%1$s 创建了群聊</string>
    <string name="change_group_data">%1$s 修改了群资料</string>
    <string name="quit_group2">%1$s 退出了群聊</string>
    <string name="invited_tips">%1$s 邀请 %2$s 加入群聊</string>
    <string name="kicked_group_tips">%1$s 被 %2$s 踢出群聊</string>
    <string name="join_group2">%1$s 加入了群聊</string>
    <string name="dismiss_group">%1$s 解散了群聊</string>
    <string name="transferred_group">%1$s 将群转让给了 %2$s</string>
    <string name="Muted_group">%1$s 被 %2$s 禁言%3$s</string>
    <string name="cancel_muted">%1$s 被 %2$s 取消了禁言</string>
    <string name="start_muted">%1$s 开启了全体禁言</string>
    <string name="close_muted">%1$s 关闭了全体禁言</string>
    <string name="edit_data">%1$s 编辑了自己的群成员资料</string>
    <string name="start_burn_after_read">已开启阅后即焚</string>
    <string name="stop_burn_after_read">已关闭阅后即焚</string>
    <string name="readed">已读 %1$s</string>
    <string name="unread">未读 %1$s</string>
    <string name="offline">离线</string>
    <string name="online">%1$s在线</string>
    <string name="mobile_phone">手机</string>
    <string name="pc">PC</string>
    <string name="Web">Web</string>
    <string name="webMiniOnline">小程序</string>
    <string name="synthesis">综合</string>
    <string name="group">群组</string>
    <string name="contact">联系人</string>
    <string name="two_related_chats">%1$s条相关聊天记录</string>
    <string name="say_more">查看更多</string>
    <string name="sender">发送者</string>
    <string name="kicked_offline_tips">账号已在其他地方登录，当前设备被踢下线！</string>
    <string name="token_expired">登录票据已经过期,请重新登录！</string>
    <string name="token_invalid">登录票据无效,请重新登录！</string>
    <string name="repeat_group_manager">你已经是群主了</string>
    <string name="transfer_permission">确定将群主转让给：%1$s?</string>
    <string name="transfer_succ">转让成功</string>
    <string name="msg_notification">消息通知</string>
    <string name="a_message_is_received">您收到一条消息</string>
    <string name="administrator">管理员</string>
    <string name="about_us">关于我们</string>
    <string name="check_the_new">检查新版本</string>
    <string name="reply">回复</string>
    <string name="total_silence">全员禁言</string>
    <string name="join_validation">进群验证</string>
    <string name="needVerification">需要发送验证信息</string>
    <string name="allowAnyoneJoinGroup">允许任何人加群</string>
    <string name="inviteNotVerification">群成员邀请无需验证</string>
    <string name="memberPermissions">群成员权限</string>
    <string name="notViewMemberProfiles">不允许查看其他群成员资料</string>
    <string name="notAddMemberToFriend">不允许添加群成员为好友</string>
    <string name="super_group">工作群</string>
    <string name="ordinary_group">普通群</string>
    <string name="group_type">群类型</string>
    <string name="copy">复制</string>
    <string name="recommend_to_friend">把他推荐给朋友</string>
    <string name="recommend_who">确定推荐给%1$s吗？</string>
    <string name="recommend_who_to_friends">确定推荐给%1$s等%2$d位好友吗？</string>
    <string name="send_card_confirm">确定将该名片发送到本聊天？</string>
    <string name="bulletin_edit_tips">只有群主及管理员可以编辑</string>
    <string name="mark_read">标记已读</string>
    <string name="start_download">开始下载</string>
    <string name="save_custom_dir">已成功保存至%1$s</string>
    <string name="save_succ">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="save_cancel">保存取消</string>
    <string name="search_friends">搜索好友</string>
    <string name="group_nickName">群昵称</string>
    <string name="join_group_time">入群时间</string>
    <string name="you">你</string>
    <string name="server_config">服务器配置</string>
    <string name="read_vanish">阅后即焚</string>
    <string name="general_group">普通群</string>
    <string name="work_group">工作群</string>
    <string name="create_word_group">创建工作群</string>
    <string name="my_qr">我的二维码</string>
    <string name="scan_qr_card">扫描二维码名片</string>
    <string name="account_setting">账号设置</string>
    <string name="not_disturb">勿扰模式</string>
    <string name="clear_chat_all_record">确认清空所有聊天记录</string>
    <string name="cleared">已清理</string>
    <string name="blackList">通讯黑名单</string>
    <string name="select_tips">最多选择 %1$d 项</string>
    <string name="selected_tips">已选择：%1$d人</string>
    <string name="selected_tips2">已选择（%1$d）</string>
    <string name="selected_group_tips">已选择：%1$d个群</string>
    <string name="save_photo_album">图片已保存至相册</string>
    <string name="vc_login">验证码登录</string>
    <string name="vc">验证码</string>
    <string name="password_login">密码登录</string>
    <string name="get_vc">获取验证码</string>
    <string name="set_password">请设置新的密码</string>
    <string name="login_tips">登录密码用于登陆OpenIM账号</string>
    <string name="login_tips2">需6～20位字符</string>
    <string name="confirm_modification">确认修改</string>
    <string name="login_tips3">密码长度在6~20个字符之间</string>
    <string name="group_call_tips2">至少选择一个成员</string>
    <string name="password_valid_tips">6-20位，至少包含数字、字母</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_nick_name">请输入您的昵称</string>
    <string name="join_im">进入OpenIM</string>
    <string name="nickname">昵称</string>
    <string name="sure_password">确认密码：</string>
    <string name="sure_password2">确认密码</string>
    <string name="setting_info">设置信息</string>
    <string name="sure_password_tips">请再次确认您的密码</string>
    <string name="reset_success_tips">点击确认后跳转回登录页面。</string>
</resources>