<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_shape_gradient"
        android:orientation="vertical"
        tools:context=".ui.login.ResetPasswordActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:onClick="toBack"
            android:padding="5dp"
            android:src="@mipmap/ic_back2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:textColor="@color/theme"
                android:textSize="26sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sty_radius_6_tr_stroke_e6e6e6"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt2"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:textColor="#ff333333"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/eyes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:drawableEnd="@drawable/selector_open_eyes"
                        android:paddingRight="8dp" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_valid_tips"
                android:textColor="#ff0089ff"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sure_password"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sty_radius_6_tr_stroke_e6e6e6"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt3"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/sure_password_tips"
                        android:paddingLeft="10dp"
                        android:inputType="textPassword"
                        android:textColor="#ff333333"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/eyes2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:drawableEnd="@drawable/selector_open_eyes"
                        android:paddingRight="8dp" />
                </LinearLayout>


            </LinearLayout>



            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:enabled="false"
                android:text="@string/confirm_modification"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/reset_success_tips"
                android:textColor="#ffff381f"
                android:textSize="17sp"
                />
        </LinearLayout>

    </LinearLayout>
</layout>
